# dreamlog

./: .coverage  .gitignore  .zenodo.json  404.html  CITATION.cff  CLAUDE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Makefile  PERSISTENT_LEARNING.md  README.md  demo.py  dreamlog_config.yaml  eval-dl.py  eval2.py  index.html  llm_config.json  mcp.json.example  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  simple_test.py  sitemap.xml  test.py  test_core.py  test_improved_prompts.py  test_llm_hook.py  test_ollama_json.py  test_ollama_simple.py  test_prompt_generation.py  test_prompt_templates.py  test_retry_system.py  test_template_ollama.py  test_template_simple.py  test_validation.py  test_validation_feedback.py
api/: index.html
benchmarks/: baseline.json  sleep_cycle_bench.py
docs/: FUTURE_VISION.md  index.md
dreamlog/: __init__.py  anti_unification.py  background_learner.py  config.py  config_schema.yaml  correction_retry.py  embedding_providers.py  engine.py  evaluator.py  example_retriever.py  extended_config.py  factories.py  kb_dreamer.py  knowledge.py  knowledge_validator.py  learning_api.py  llm_client.py  llm_hook.py  llm_judge.py  llm_prompt_templates.py  llm_providers.py  llm_response_parser.py  llm_retry_wrapper.py  logging_config.py  persistent_learning.py  prefix_parser.py  prompt_template_system.py  proof_tree.py  pythonic.py  rag_enhanced_hook.py  rag_examples.json  rag_framework.py  recursive_discovery.py  repl.py  rule_equivalence.py  rule_validator.py  skeleton.py  sleep_cycle.py  terms.py  tfidf_embedding_provider.py  (+5 more)
examples/: background_service_demo.py  dreamlog_examples.json  experiment_ollama.py  family.dl  family.json  family2.dl  index.html  ollama_config.py  persistent_learning_demo.py  wake_sleep_demo.py
experiments/: _harness.py  ablation_and_scale.py  dl_decision_diff.py  dreamcoder_benchmark.py  ex16_prompt_and_filter.py  ex20_multi_cycle_llm.py  ex21_wake_sleep_speedup.py  ex22_full_wake_sleep.py  ex23_simulated_long_lived.py  ex24_research_lab.py  ex25_generalization.py  ex25b_novel_generalization.py  ex25c_holdout_sweep.py  ex26_popper_baseline.py  ex27_recursion.py  ex28_domains.py  ex28_harness.py  ex28_llm_role.py  ex28_probe.py  ex29_bits_scale.py  ex30_bits_surfaces.py  ex31_default_flip.py  ex32_noise_filter.py  ex33_compression_predicts.py  ex34_transfer.py  ex35_opi_density.py  ex36_context_effect.py  ex37_opi_open_world.py  ex38_domain_family.py  ex39_llm_multidomain.py  ex40_metagol_baseline.py  ex41_ilasp_baseline.py  experiment_registry.yaml  iterative_dreaming.py  llm_multi_domain.py  llm_sleep_cycle.py  noise_and_ordering.py  ollama_helper.py  real_world_kb.py
integrations/: __init__.py  index.html
jlog/: __init__.py  engine.py  evaluator.py  knowledge.py  llm_config.py  llm_hook.py  llm_providers.py  terms.py  unification.py
paper/: Makefile  dreamlog_paper.aux  dreamlog_paper.out  dreamlog_paper.tex  references.bib
prolog-lm/: eval.py  eval_logic.py  example.pl  fam.pl  fam.py  family.pl  gen.py  prolog.py  prolog2.py  test.py  training_data.json
search/: search_index.json
temp-experiments/: simple_visualizer_test.py  test_visualizer.py
tests/: mock_provider.py  test_anti_unification.py  test_call.py  test_clause_subsumes.py  test_compression_coverage.py  test_compression_dl.py  test_compression_gate.py  test_correction_retry.py  test_dl_bits.py  test_dreaming.py  test_embedding_providers.py  test_engine.py  test_ex28_domains.py  test_ex28_harness.py  test_ex28_probe.py  test_example_retriever.py  test_kb_dreamer.py  test_kb_methods.py  test_knowledge_advanced.py  test_knowledge_removal.py  test_llm.py  test_llm_client.py  test_llm_hook.py  test_llm_inference.py  test_llm_judge.py  test_llm_providers.py  test_llm_response_parser_fixes.py  test_mcp_knowledge_store.py  test_mdl_refactor_regression.py  test_model_commands.py  test_naf.py  test_ollama_helper.py  test_proof_tree.py  (+19 more)
(+219 files in other folders)
